--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
     "watch": "webpack --watch",
     "build": "webpack"
   },
-  
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "babel-loader": "^9.1.2",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
